// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataCircleCard card body link works: card title link 1`] = `
<Link
  className="red circle"
  key="0"
  onClick={[Function]}
  to="/pregnancy_compartments/hierarchicaldata/Pregnancy/red/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
>
  <LinkAnchor
    className="red circle"
    href="/pregnancy_compartments/hierarchicaldata/Pregnancy/red/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
    navigate={[Function]}
    onClick={[Function]}
  >
    <a
      className="red circle"
      href="/pregnancy_compartments/hierarchicaldata/Pregnancy/red/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
      onClick={[Function]}
    >
      <span
        className="number"
      />
      <span
        className="risk-level"
      >
        Red Alert
      </span>
    </a>
  </LinkAnchor>
</Link>
`;

exports[`DataCircleCard card title link works: card title link 1`] = `
<Link
  onClick={[Function]}
  to="/pregnancy_compartments/hierarchicaldata/Pregnancy/all/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
>
  <LinkAnchor
    href="/pregnancy_compartments/hierarchicaldata/Pregnancy/all/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
    navigate={[Function]}
    onClick={[Function]}
  >
    <a
      href="/pregnancy_compartments/hierarchicaldata/Pregnancy/all/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
      onClick={[Function]}
    >
      <h5
        className="card_title"
      >
        2 Total Pregnancies
      </h5>
    </a>
  </LinkAnchor>
</Link>
`;

exports[`DataCircleCard must render correctly 1`] = `
<Card
  className="dataCircleCard"
  tag="div"
>
  <div
    className="dataCircleCard card"
  >
    <CardTitle
      tag="div"
    >
      <div
        className="card-title"
      >
        <Link
          onClick={[Function]}
          to="/pregnancy_compartments/hierarchicaldata/Pregnancy/all/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
        >
          <LinkAnchor
            href="/pregnancy_compartments/hierarchicaldata/Pregnancy/all/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
            navigate={[Function]}
            onClick={[Function]}
          >
            <a
              href="/pregnancy_compartments/hierarchicaldata/Pregnancy/all/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
              onClick={[Function]}
            >
              <h5
                className="card_title"
              >
                2 Total Pregnancies
              </h5>
            </a>
          </LinkAnchor>
        </Link>
      </div>
    </CardTitle>
    <CardBody
      className="circlesRow"
      tag="div"
    >
      <div
        className="circlesRow card-body"
      >
        <Link
          className="red circle"
          key="0"
          onClick={[Function]}
          to="/pregnancy_compartments/hierarchicaldata/Pregnancy/red/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
        >
          <LinkAnchor
            className="red circle"
            href="/pregnancy_compartments/hierarchicaldata/Pregnancy/red/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
            navigate={[Function]}
            onClick={[Function]}
          >
            <a
              className="red circle"
              href="/pregnancy_compartments/hierarchicaldata/Pregnancy/red/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
              onClick={[Function]}
            >
              <span
                className="number"
              />
              <span
                className="risk-level"
              >
                Red Alert
              </span>
            </a>
          </LinkAnchor>
        </Link>
        <Link
          className="yellow circle"
          key="1"
          onClick={[Function]}
          to="/pregnancy_compartments/hierarchicaldata/Pregnancy/risk/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
        >
          <LinkAnchor
            className="yellow circle"
            href="/pregnancy_compartments/hierarchicaldata/Pregnancy/risk/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
            navigate={[Function]}
            onClick={[Function]}
          >
            <a
              className="yellow circle"
              href="/pregnancy_compartments/hierarchicaldata/Pregnancy/risk/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
              onClick={[Function]}
            >
              <span
                className="number"
              />
              <span
                className="risk-level"
              >
                risk
              </span>
            </a>
          </LinkAnchor>
        </Link>
        <Link
          className="green circle"
          key="2"
          onClick={[Function]}
          to="/pregnancy_compartments/hierarchicaldata/Pregnancy/no/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
        >
          <LinkAnchor
            className="green circle"
            href="/pregnancy_compartments/hierarchicaldata/Pregnancy/no/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
            navigate={[Function]}
            onClick={[Function]}
          >
            <a
              className="green circle"
              href="/pregnancy_compartments/hierarchicaldata/Pregnancy/no/2 Total Pregnancies/0/down/d1865325-11e6-4e39-817b-e676c1affecf/0"
              onClick={[Function]}
            >
              <span
                className="number"
              >
                10
              </span>
              <span
                className="risk-level"
              >
                No Risk
              </span>
            </a>
          </LinkAnchor>
        </Link>
      </div>
    </CardBody>
  </div>
</Card>
`;
